@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -22,9 +22,9 @@ import java.sql.Types;
 public class SVNRepositoryTable {
 
 	public static final Object[][] TABLE_COLUMNS = {
-		{"svnRepositoryId", new Integer(Types.BIGINT)},
-		{"url", new Integer(Types.VARCHAR)},
-		{"revisionNumber", new Integer(Types.BIGINT)}
+		{"svnRepositoryId", Integer.valueOf(Types.BIGINT)},
+		{"url", Integer.valueOf(Types.VARCHAR)},
+		{"revisionNumber", Integer.valueOf(Types.BIGINT)}
 	};
 
 	public static final String TABLE_NAME = "SC_SVNRepository";
